# lvfs

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  generate-docs.sh  pyproject.toml  requirements.txt  test-installation.dockerfile  test-installation.sh  test.dockerfile  test.sh  test_installation.dockerfile  test_installation.sh
.github/workflows/: codeql-analysis.yml  python-package.yml  uploadandscan.yml
lvfs/: __init__.py  __main__.py  artifactory.py  credentials.py  gcs.py  hdfsclioverssh.py  hdfsoverssh.py  local.py  minio.py  stat.py  url.py  vault.py
tests/: __init__.py  test_generic.py  test_installation_methods.sh  test_local.py  test_minio.py  test_url_local.py  test_webhdfs.py
tests/data/: default-lvfs.yml  dummy.txt  test_json.json  test_orc.orc  test_parquet.pq  test_pkl.pkl  test_yaml.yml
