[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lvfs"
author = "Lowe's Companies, Inc."
author-email = " lowesopensource@lowes.com"
home-page = "https://github.com/lowes"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python = ">=3.6"
requires = [
    "pandas ~= 1.0",
    "pyyaml ~= 5.3",
    "hvac ~= 0.10",
    "keyring ~= 21.5",
    "python-dotenv ~= 0.15.0",
    "aiofiles >= 0.5.0",
    "pyarrow >= 0.13.0",
    # Pybind is a dependency of pyorc but in some cases (alpine?) pip will not install it.
    # So we force the issue here.
    "pybind11 ~= 2.6.0",
]

[tool.flit.metadata.requires-extra]
all = [
    "google-cloud-storage ~= 1.29",
    "minio ~= 6.0",
    "hdfs ~= 2.5",
    "paramiko ~= 2.7.1",
    "PySocks ~= 1.7",
    "requests ~= 2.23",
    "pyorc ~= 0.4.0",
    "gssapi ~= 1.6.12",
    "requests-gssapi ~= 1.2.3"
]
gcs = [
    "google-cloud-storage ~= 1.29"
]
minio = [
    "minio ~= 6.0"
]
hdfs = [
    "hdfs ~= 2.5",
    "paramiko ~= 2.7.1",
    "PySocks ~= 1.7",
    "requests ~= 2.23"
]
test = [
    "pytest-benchmark ~= 3.0",
    "pytest-timeout ~= 1.4",
    "pytest-asyncio ~= 0.14.0",
    "pytest ~= 6.0"
]