[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lvfs"
author = "Lowe's Companies, Inc."
author-email = " lowesopensource@lowes.com"
home-page = "https://github.com/lowes"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python = ">=3.8"
requires = [
    "pandas ~= 1.4",
    "pyyaml ~= 6.0",
    "hvac ~= 0.11",
    "keyring ~= 23.5",
    "python-dotenv ~= 0.19",
    "aiofiles ~= 0.8",
    "pyarrow ~= 6.0",
    # Pybind is a dependency of pyorc but in some cases (alpine?) pip will not install it.
    # So we force the issue here.
    "pybind11 ~= 2.9",
]

[tool.flit.metadata.requires-extra]
all = [
    "google-cloud-storage ~= 2.1",
    "minio ~= 6.0",
    "hdfs ~= 2.6",
    "paramiko ~= 2.9",
    "PySocks ~= 1.7",
    "requests ~= 2.27",
    "pyorc ~= 0.5",
    "gssapi ~= 1.7",
    "requests-gssapi ~= 1.2"
]
gcs = [
    "google-cloud-storage ~= 2.1"
]
minio = [
    "minio ~= 6.0"
]
hdfs = [
    "hdfs ~= 2.6",
    "paramiko ~= 2.9",
    "PySocks ~= 1.7",
    "requests ~= 2.27"
]
test = [
    "pytest-benchmark ~= 3.4",
    "pytest-timeout ~= 2.1",
    "pytest-asyncio ~= 0.17",
    "pytest ~= 6.2"
]